Closed
Bug 334543
Opened 19 years ago
Closed 19 years ago
[FIX]Remove layout.reflow.async.duringDocLoad pref
Categories
(Core :: Layout, defect, P2)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla1.9alpha1
People
(Reporter: jag+mozilla, Assigned: bzbarsky)
Details
Attachments
(2 files)
6.72 KB,
patch
|
Details | Diff | Splinter Review | |
5.17 KB,
patch
|
dbaron
:
review+
dbaron
:
superreview+
|
Details | Diff | Splinter Review |
With that pref set to false, sometimes text will get duplicated. Thanks to dbaron's recent landing of assertions on re-entrancy in layout, the problem was easily found:
*bz* Oh
*bz* I see
*bz* so from inside any document observer notification we'll reflow
*bz* yeah
*bz* that's bogus
*bz* this pref needs to go
![]() |
Assignee | |
Comment 1•19 years ago
|
||
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
![]() |
Assignee | |
Comment 2•19 years ago
|
||
Attachment #218905 -
Flags: superreview?(dbaron)
Attachment #218905 -
Flags: review?(dbaron)
![]() |
Assignee | |
Updated•19 years ago
|
Priority: -- → P2
Summary: Remove layout.reflow.async.duringDocLoad pref → [FIX]Remove layout.reflow.async.duringDocLoad pref
Target Milestone: --- → mozilla1.9alpha
Attachment #218905 -
Flags: superreview?(dbaron)
Attachment #218905 -
Flags: superreview+
Attachment #218905 -
Flags: review?(dbaron)
Attachment #218905 -
Flags: review+
![]() |
Assignee | |
Comment 3•19 years ago
|
||
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Updated•7 years ago
|
Product: Core → Core Graveyard
Updated•7 years ago
|
Component: Layout: Misc Code → Layout
Product: Core Graveyard → Core
You need to log in
before you can comment on or make changes to this bug.
Description
•