Remove the layout.reflow.async.duringDocLoad pref -- setting it to false just makes us buggy.  Bug 334543, r+sr=dbaron